<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory

        android:title="Filter Option">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/period_entries"
            android:entryValues="@array/period_entries_values"
            android:key="@string/key_period"
            android:title="@string/title_period"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/min_earthquakes_entries"
            android:entryValues="@array/min_earthquakes_entries_values"
            android:key="@string/key_min_magnitude"
            android:title="@string/title_min_magnitude" />


        <ListPreference
            android:defaultValue="5"
            android:entries="@array/max_earthquakes_entries"
            android:entryValues="@array/max_earthquakes_entries_Values"
            android:key="@string/key_max_magnitude"
            android:title="@string/title_max_magnitude" />

        <ListPreference
            android:defaultValue="4"
            android:entries="@array/sort_array_entries"
            android:entryValues="@array/sort_array_entries_values"
            android:key="@string/key_sort"
            android:title="@string/title_sort" />

    </PreferenceCategory>
</PreferenceScreen>